Display a selection in the canvas